Bug 1451745 - Initialize mDocumentState once we get a docshell. r=emilio a=jcristau

--HG--
extra : source : 912d129db081b9d7cce5d239645b7859d74eac6f
extra : amend_source : fb3554dba72b5e1c8475a231d034d15ced76c95d